[package]
name = "har-bench"
version = "0.1.0"
authors = ["Virgiel"]
edition = "2024"

[dependencies]
# Async engine
tokio = "1.28"
# JSON
serde_json = "1.0"
# Load testing tool
goose = "0.17"
# Small and performant allocator
mimalloc = { version = "0.1", default-features = false }
# Regex
regex = "1.10.6"
# Url parser
url = "2.3"
# Argument parser
clap = { version = "4.5", features = ["derive"] }

# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"